2009-06-23  Dominique Dumont  <dominique.dumont@hp.com>  v0.637

	* lib/Config/Model/Value.pm: As suggested by Jonas Smedegaard,
	replaced 'built_in' parameter with 'upstream_default'. This change
	will trigger warnings but no errors with existing model. To get
	rid of the warnings, the easiest solution is to update the model
	by running "config-model-edit -model Foo -save" (config-model-edit
	is provided by Config::Model::Itself)

	* lib/Config/Model/CheckList.pm: replaced 'built_in_list'
	parameter with 'upstream_default_list'. This change may also
	trigger warnings. These warnings will also be fixed by running the
	config-model-edit command described above.

	* lib/Config/Model/Value.pm: use Log::Log4perl with categories
	Tree::Element::Value and Tree::Element::Warper

2009-05-30  Dominique Dumont  <dominique.dumont@hp.com> v0.636

	* lib/Config/Model/AutoRead.pm: Added skip_open to avoid opening
	config target file when the open must be done by the
	backend (e.g. for Augeas backend)

	* lib/Config/Model.pm (instance): name parameter is no longer
	mandatory. Uses 'default' as default instance name.

2009-05-13  Dominique Dumont  <dominique.dumont@hp.com> 

	* lib/Config/Model/AutoRead.pm: When calling backend, 'file'
	parameter contains configuration file name without path and
	'file_path' parameter contains complete path and file name

2009-04-17  Dominique Dumont  <dominique.dumont@hp.com> v0.635

	* config-edit: added -dumptype option. -dump can now be used to
	specify a file name

	* lib/Config/Model/Instance.pm (new): Added skip_read parameter

	* lib/Config/Model/Node.pm (new): Added skip_read parameter

2009-04-15  Dominique Dumont  <dominique.dumont@hp.com>

	* config-edit: Fix broken Log4Perl default config. Added -load option

2009-04-11  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/AutoRead.pm (): Reworked doc. Aligned read and
	write specs (now have same parameters). Read and write callback